--- a/style.css
+++ b/style.css
@@ -52,4 +52,72 @@ div{
     gap: 10px;
 }
 
+.project-container{
+    display: grid;
+    grid-template-columns: 1fr 200fr;
+}
 
+.project{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.project ul{
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
+    gap: 20px;
+}
+
+.projects{
+    display: grid;
+    grid-template-rows: min-content 250px;
+    grid-auto-rows: 250px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    grid-column: 1/2;
+    grid-row: 1/-1;
+}
+
+.projects > h5{
+    grid-column: 1/-1;
+    grid-row: 1/2;
+}
+
+.announcements-container{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.trend{
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+}
+
+.trends-container{
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    gap: 30px;
+}
+
+.announcements{
+    display: grid;
+    grid-template-rows: min-content 1fr;
+    gap: 15px;
+}
+
+.main{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 40px;
+    column-gap: 20px;
+}
+
+.projects > h5{
+    margin-bottom: -20px;
+}
+
+.trends > h5{
+    margin-bottom: 15px;
+}
