--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 
 body{
     box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 4fr;
+    row-gap: 40px;
 }
 
 ul{
@@ -18,6 +22,8 @@ div{
     display: grid;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
+    grid-column: 2/-1;
+    grid-row: 1/2;
 }
 
 .header-first{
@@ -43,7 +49,9 @@ div{
 .sidebar{
     display: grid;
     grid-template-rows: repeat(3, min-content);
-    gap: 30px;
+    gap: 70px;
+    grid-row: 1/-1;
+    grid-column: 1/2;
 }
 
 .dashboard-container, .param-container{
@@ -112,6 +120,9 @@ div{
     grid-template-rows: repeat(2, 1fr);
     row-gap: 40px;
     column-gap: 20px;
+    grid-column: 2/-1;
+    grid-row: 2/-1;
+    padding: 0 30px 80px 20px;
 }
 
 .projects > h5{
