--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Roboto;
+    src: url("fonts/Roboto-Regular.ttf");
+}
+
 * {
     margin: 0;
 }
@@ -5,9 +10,10 @@
 body{
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 0.6fr 3fr;
     grid-template-rows: 1fr 4fr;
     row-gap: 40px;
+    font-family: Roboto, sans-serif;
 }
 
 ul{
@@ -52,6 +58,7 @@ div{
     gap: 70px;
     grid-row: 1/-1;
     grid-column: 1/2;
+    background-color: #1992d4;
 }
 
 .dashboard-container, .param-container{
@@ -62,7 +69,7 @@ div{
 
 .project-container{
     display: grid;
-    grid-template-columns: 1fr 200fr;
+    grid-template-columns: 1fr 70fr;
 }
 
 .project{
@@ -131,4 +138,8 @@ div{
 
 .trends > h5{
     margin-bottom: 15px;
+}
+
+.yellow-stripe-container{
+    background-color: #f0b429;
 }
