--- a/style.css
+++ b/style.css
@@ -268,3 +268,7 @@ input[type="search"]{
 .announcement:first-child, .announcement:nth-child(2){
     border-bottom: solid 1px gray;
 }
+
+.trendtext{
+    color: gray;
+}
